jswt-parser/src/snapshots/jswt_parser__test__parse_prefix_unary_expression.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        source_elements: SourceElements {
            source_elements: [
                Statement(
                    Variable(
                        VariableStatement {
                            span: Span {
                                file: "test.1",
                                module: "module/test.1",
                                start: 0,
                                end: 18,
                            },
                            modifier: Let(
                                Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 0,
                                    end: 3,
                                },
                            ),
                            target: Identifier(
                                Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 4,
                                        end: 5,
                                    },
                                    value: "x",
                                },
                            ),
                            expression: Unary(
                                UnaryExpression {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 15,
                                        end: 15,
                                    },
                                    op: PostDecrement(
                                        Span {
                                            file: "test.1",
                                            module: "module/test.1",
                                            start: 15,
                                            end: 17,
                                        },
                                    ),
                                    expr: Literal(
                                        Integer(
                                            IntegerLiteral {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 13,
                                                    end: 15,
                                                },
                                                value: 99,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            type_annotation: Some(
                                TypeAnnotation {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 7,
                                        end: 10,
                                    },
                                    ty: Primitive(
                                        I32,
                                    ),
                                },
                            ),
                        },
                    ),
                ),
            ],
        },
    },
}
