jswt-parser/src/snapshots/jswt_parser__test__parse_return_statement.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_return_statement",
                    module: "module/test_parse_return_statement",
                    start: 0,
                    end: 10,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_return_statement",
                        module: "module/test_parse_return_statement",
                        start: 0,
                        end: 10,
                    },
                    source_elements: [
                        Statement(
                            Return(
                                ReturnStatement {
                                    span: Span {
                                        file: "test_parse_return_statement",
                                        module: "module/test_parse_return_statement",
                                        start: 0,
                                        end: 10,
                                    },
                                    expression: Literal(
                                        Integer(
                                            IntegerLiteral {
                                                span: Span {
                                                    file: "test_parse_return_statement",
                                                    module: "module/test_parse_return_statement",
                                                    start: 7,
                                                    end: 9,
                                                },
                                                value: 99,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
