jswt-parser/src/snapshots/jswt_parser__test__parse_this_expression.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        Statement(
                            Expression(
                                ExpressionStatement {
                                    span: Span {
                                        file: "parse_this_expression",
                                        module: "module/parse_this_expression",
                                        start: 0,
                                        end: 5,
                                        [content]: "this;",
                                    },
                                    expression: This(
                                        ThisExpression {
                                            span: Span {
                                                file: "parse_this_expression",
                                                module: "module/parse_this_expression",
                                                start: 0,
                                                end: 4,
                                                [content]: "this",
                                            },
                                        },
                                    ),
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
