jswt-parser/src/snapshots/jswt_parser__test__parse_unary_expression.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_unary_expression",
                    module: "module/test_parse_unary_expression",
                    start: 0,
                    end: 13,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_unary_expression",
                        module: "module/test_parse_unary_expression",
                        start: 0,
                        end: 13,
                    },
                    source_elements: [
                        Statement(
                            Expression(
                                ExpressionStatement {
                                    span: Span {
                                        file: "test_parse_unary_expression",
                                        module: "module/test_parse_unary_expression",
                                        start: 0,
                                        end: 13,
                                    },
                                    expression: Additive(
                                        BinaryExpression {
                                            span: Span {
                                                file: "test_parse_unary_expression",
                                                module: "module/test_parse_unary_expression",
                                                start: 0,
                                                end: 12,
                                            },
                                            left: Multiplicative(
                                                BinaryExpression {
                                                    span: Span {
                                                        file: "test_parse_unary_expression",
                                                        module: "module/test_parse_unary_expression",
                                                        start: 0,
                                                        end: 7,
                                                    },
                                                    left: Unary(
                                                        UnaryExpression {
                                                            span: Span {
                                                                file: "test_parse_unary_expression",
                                                                module: "module/test_parse_unary_expression",
                                                                start: 0,
                                                                end: 2,
                                                            },
                                                            op: Minus(
                                                                Span {
                                                                    file: "test_parse_unary_expression",
                                                                    module: "module/test_parse_unary_expression",
                                                                    start: 0,
                                                                    end: 1,
                                                                },
                                                            ),
                                                            expr: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        span: Span {
                                                                            file: "test_parse_unary_expression",
                                                                            module: "module/test_parse_unary_expression",
                                                                            start: 1,
                                                                            end: 2,
                                                                        },
                                                                        value: 1,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                    op: Mult(
                                                        Span {
                                                            file: "test_parse_unary_expression",
                                                            module: "module/test_parse_unary_expression",
                                                            start: 3,
                                                            end: 4,
                                                        },
                                                    ),
                                                    right: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                span: Span {
                                                                    file: "test_parse_unary_expression",
                                                                    module: "module/test_parse_unary_expression",
                                                                    start: 5,
                                                                    end: 7,
                                                                },
                                                                value: 10,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                            op: Plus(
                                                Span {
                                                    file: "test_parse_unary_expression",
                                                    module: "module/test_parse_unary_expression",
                                                    start: 8,
                                                    end: 9,
                                                },
                                            ),
                                            right: Unary(
                                                UnaryExpression {
                                                    span: Span {
                                                        file: "test_parse_unary_expression",
                                                        module: "module/test_parse_unary_expression",
                                                        start: 10,
                                                        end: 12,
                                                    },
                                                    op: Minus(
                                                        Span {
                                                            file: "test_parse_unary_expression",
                                                            module: "module/test_parse_unary_expression",
                                                            start: 10,
                                                            end: 11,
                                                        },
                                                    ),
                                                    expr: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                span: Span {
                                                                    file: "test_parse_unary_expression",
                                                                    module: "module/test_parse_unary_expression",
                                                                    start: 11,
                                                                    end: 12,
                                                                },
                                                                value: 5,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
