jswt-parser/src/snapshots/jswt_parser__test__parse_variable_statement_with_number.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_variable_statement_with_number",
                    module: "module/test_parse_variable_statement_with_number",
                    start: 0,
                    end: 11,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_variable_statement_with_number",
                        module: "module/test_parse_variable_statement_with_number",
                        start: 0,
                        end: 11,
                    },
                    source_elements: [
                        VariableDeclaration(
                            VariableDeclarationElement {
                                annotations: [],
                                export: false,
                                span: Span {
                                    file: "test_parse_variable_statement_with_number",
                                    module: "module/test_parse_variable_statement_with_number",
                                    start: 0,
                                    end: 11,
                                },
                                modifier: Let(
                                    Span {
                                        file: "test_parse_variable_statement_with_number",
                                        module: "module/test_parse_variable_statement_with_number",
                                        start: 0,
                                        end: 3,
                                    },
                                ),
                                name: Identifier {
                                    span: Span {
                                        file: "test_parse_variable_statement_with_number",
                                        module: "module/test_parse_variable_statement_with_number",
                                        start: 4,
                                        end: 5,
                                    },
                                    value: "x",
                                },
                                expression: Literal(
                                    Integer(
                                        IntegerLiteral {
                                            span: Span {
                                                file: "test_parse_variable_statement_with_number",
                                                module: "module/test_parse_variable_statement_with_number",
                                                start: 8,
                                                end: 10,
                                            },
                                            value: 42,
                                            ty: Unknown,
                                        },
                                    ),
                                ),
                                type_annotation: None,
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
