jswt-parser/src/snapshots/jswt_parser__test__parse_variable_statement_with_string.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_variable_statement_with_string",
                    module: "module/test_parse_variable_statement_with_string",
                    start: 0,
                    end: 22,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_variable_statement_with_string",
                        module: "module/test_parse_variable_statement_with_string",
                        start: 0,
                        end: 22,
                    },
                    source_elements: [
                        Statement(
                            Variable(
                                VariableStatement {
                                    span: Span {
                                        file: "test_parse_variable_statement_with_string",
                                        module: "module/test_parse_variable_statement_with_string",
                                        start: 0,
                                        end: 22,
                                    },
                                    modifier: Let(
                                        Span {
                                            file: "test_parse_variable_statement_with_string",
                                            module: "module/test_parse_variable_statement_with_string",
                                            start: 0,
                                            end: 3,
                                        },
                                    ),
                                    target: Identifier(
                                        Identifier {
                                            span: Span {
                                                file: "test_parse_variable_statement_with_string",
                                                module: "module/test_parse_variable_statement_with_string",
                                                start: 4,
                                                end: 5,
                                            },
                                            value: "x",
                                        },
                                    ),
                                    expression: Literal(
                                        String(
                                            StringLiteral {
                                                span: Span {
                                                    file: "test_parse_variable_statement_with_string",
                                                    module: "module/test_parse_variable_statement_with_string",
                                                    start: 8,
                                                    end: 21,
                                                },
                                                value: "Hello World",
                                            },
                                        ),
                                    ),
                                    type_annotation: None,
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
